--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,6 +1,12 @@
-//colors 
+// colors 
+$dark-grey: #333;
+$blue: #1c88bf;
+$dark-blue: #364051;
 
-//spacing
+// font sizes
+$font-size-large: 1.8rem;
+
+// spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
